# seva-archive

./: .gitignore  Cargo.toml  LICENSE  README.md  bios_boot.sh  building-for-your-os.md  building-seva.md  clean.sh  documentation.md  linker.ld  uefi_boot.sh  x86_64-seva.json
.cargo/: config  (+1 more)
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: ata.rs  gdt.rs  interrupt.rs  mod.rs  pci.rs  pic.rs  port.rs  serial.rs
kernel/src/bootloader/: stage1.s  stage2.s
kernel/src/driver/: e1000.rs  ps2_keyboard.rs  vga_driver.rs
kernel/src/drivers/: e1000.rs  mod.rs  ps2_keyboard.rs  vga_driver.rs
kernel/src/drivers/acpi/: Cargo.toml
kernel/src/drivers/ahci/: Cargo.toml
kernel/src/drivers/alx/: Cargo.toml
kernel/src/drivers/bga/: Cargo.toml
kernel/src/drivers/block-io-wrapper/: Cargo.toml
kernel/src/drivers/e1000/: Cargo.toml
kernel/src/drivers/ihda/: Cargo.toml
kernel/src/drivers/ixgbe/: Cargo.toml
kernel/src/drivers/nvme/: Cargo.toml
kernel/src/drivers/pci/: Cargo.toml
kernel/src/drivers/pcspkr/: Cargo.toml
kernel/src/drivers/rtl8168/: Cargo.toml
kernel/src/drivers/usbctl/: Cargo.toml
kernel/src/drivers/usbhid/: Cargo.toml
kernel/src/drivers/vbox/: Cargo.toml
kernel/src/file_system/: mod.rs  ustar.rs
kernel/src/memory_manager/: frame.rs  frame_allocator.rs  mod.rs
kernel/src/tty/: core_env.rs  env.rs  mod.rs  reader.rs  types.rs
kernel/src/utils/: lazy_static.rs  libc.rs  mod.rs  spinlock.rs
kernel/tests/: ata_read_write.rs  page_fault.rs  read_write_syscall.rs  simple_boot.rs
(+26 files in other folders)
